test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_var_decl_none_array.plx
pub fn main(none) i32 {
    x: [2]none;
    return 0
}
